<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="@color/colorLightGreen">

        <TextView
            android:id="@+id/food_title_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/food_title"
            android:layout_weight="2"
            android:textSize="20sp"
            />


        <ImageButton
            android:id="@+id/edit_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@null"
            app:srcCompat="@drawable/ic_mode_edit_black_18dp" />

        <ImageButton
            android:id="@+id/delete_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@null"
            app:srcCompat="@drawable/ic_clear_black_18dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/food_protein_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:background="@drawable/right_side_border"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/protein" />

        <TextView
            android:id="@+id/food_fat_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:background="@drawable/right_side_border"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fat" />

        <TextView
            android:id="@+id/food_carbs_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:background="@drawable/right_side_border"
            android:text="@string/carbs"
            android:gravity="center"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/food_sugar_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:background="@color/colorLightGreen"
            android:gravity="center"
            android:text="@string/sugar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/food_protein_textView_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_weight="1"
            android:background="@drawable/right_side_border"
            android:gravity="center"
            android:text="@string/protein_result" />


        <TextView
            android:id="@+id/food_fat_textView_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/right_side_border"
            android:textSize="15sp"
            android:text="@string/fat_result" />


        <TextView
            android:id="@+id/food_carbs_textView_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_weight="1"
            android:background="@drawable/right_side_border"
            android:gravity="center"
            android:text="@string/carbs_result" />


        <TextView
            android:id="@+id/food_sugar_textView_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorLightGreen"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/sugar_result" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageButton
            android:id="@+id/add_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/right_side_border"
            app:srcCompat="@drawable/ic_add_black_18dp" />

        <TextView
            android:id="@+id/food_calories_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorLightGreen"
            android:textSize="20sp"
            android:text="@string/total_calories" />

        <TextView
            android:id="@+id/food_calories_textView_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:maxLength="6"
            android:gravity="center"
            android:background="@color/colorLightGreen"
            android:textSize="20sp"
            android:text="@string/total_calories_result" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/colorToolBar"/>

</LinearLayout>

